--- a/src/analysis/prior_work.tex
+++ b/src/analysis/prior_work.tex
@@ -19,4 +19,4 @@ CFCSS is particularly advantageous because it requires no dedicated hardware (e.
 
 \subsubsection{SWIFT}
 
-SWIFT \cite{swift} (Software Implemented Fault Tolerance) is a compiler-based technique for detecting transient faults using software-only transformations, without requiring any specialized hardware. It builds upon earlier methods like EDDI by duplicating instructions and inserting validation checks, but improves upon them with several key optimizations to reduce memory and performance overhead. Unlike EDDI, SWIFT excludes memory from the sphere of replication, assuming protection is already provided by ECC in modern systems. It introduces an enhanced control-flow checking mechanism using software signatures, allowing it to detect illegal control transfers more reliably. Additionally, SWIFT incorporates optimizations such as restricting signature checks to store-containing blocks and eliminating redundant branch validation. These design decisions enable SWIFT to achieve high fault coverage with lower execution and code size overhead. Evaluated on the Itanium 2 architecture, SWIFT demonstrated fault detection rates comparable to hardware-based methods while incurring significantly less overhead than previous software-only techniques, making it well-suited for deployment on commodity hardware.
+SWIFT \cite{swift} (Software Implemented Fault Tolerance) is a compiler-based technique for detecting transient faults using software-only transformations, without requiring any specialized hardware. It builds upon earlier methods like EDDI by duplicating instructions and inserting validation checks, but improves upon them with several key optimizations to reduce memory and performance overhead. Unlike EDDI, SWIFT excludes memory from the sphere of replication, assuming protection is already provided by ECC in modern systems. It introduces an enhanced control-flow checking mechanism using software signatures, allowing it to detect illegal control transfers more reliably. Additionally, SWIFT incorporates optimizations such as restricting signature checks to store-containing blocks and eliminating redundant branch validation. These design decisions enable SWIFT to achieve high fault coverage with lower execution and code size overhead. SWIFT demonstrated fault detection rates comparable to hardware-based methods while incurring significantly less overhead than previous software-only techniques.
