--- a/sources.bib
+++ b/sources.bib
@@ -175,3 +175,10 @@ Online, eBay, and dozens of others [3]%
   keywords = {Hardware;Fault detection;Computer errors;Single event upset;Event detection;Parallel processing;Error correction;Computer architecture;Redundancy;Registers},
   doi      = {10.1109/24.994913}
 }
+
+@misc{riscv:manual,
+  author = {Andrew Waterman and Krste Asanović, RISC-V Foundation},
+  title  = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA, Document Version 20191214-draft},
+  url    = {https://drive.google.com/file/d/1uviu1nH-tScFfgrovvFCrj7Omv8tFtkp/view},
+  year   = {2019}
+}
