--- a/src/analysis/data_diversity.tex
+++ b/src/analysis/data_diversity.tex
@@ -4,7 +4,7 @@ Faults within the data are the second largest cause of errors \cite{nasa:stats},
 
 \subsubsection{Failure Regions}
 
-In many situations only very conditions will result in an error, we call these specific condition edge-cases. Even with thorough testing, there is no guarantee that all edge-cases will be caught during development, since the failure domain can be extremely small. We can take advantage of this, however, by using "reexpressed" input on a subsequent execution of a procedure, since even small adjustments of the input are likely to move it away from the failure domain. 
+In many situations only very specific conditions will result in an error, we call these specific condition edge-cases. Even with thorough testing, there is no guarantee that all edge-cases will be caught during development, since the failure domain can be extremely small. We can take advantage of this, however, by using "reexpressed" input on a subsequent execution of a procedure, since even small adjustments of the input are likely to move it away from the failure domain. 
 
 \subsubsection{Data Reexpression}
 
