--- a/src/analysis/prior_work.tex
+++ b/src/analysis/prior_work.tex
@@ -4,7 +4,7 @@ While the analysis so far was mostly theoretical, this section outlines methods 
 
 \subsubsection{EDDI}
 
-Error Detection by Duplicated Instructions \cite{eddi} (EDDI) is a pure software, single-version, technique that enhances runtime error detection by duplicating program instructions during compilation. Each original instruction (master instruction) is paired with a duplicate (shadow instruction) that operates on separate registers or variables. At key synchronization points, such as before memory writes or control transfers, the system compares the results of the master and shadow instructions. Any mismatch indicates an error, triggering a fault handler. EDDI leverages idle resources in super-scalar processors by interleaving these redundant instructions to maximize instruction-level parallelism while minimizing performance overhead. It is particularly effective in detecting transient faults, memory corruption, and control-flow deviations without requiring any hardware modifications, achieving over 98\% fault coverage in benchmark programs.
+Error Detection by Duplicated Instructions \cite{eddi} (EDDI) is a pure software, technique that enhances runtime error detection by duplicating program instructions during compilation. Each original instruction (master instruction) is paired with a duplicate (shadow instruction) that operates on separate registers or variables. At key synchronization points, such as before memory writes or control transfers, the system compares the results of the master and shadow instructions. Any mismatch indicates an error, triggering a fault handler. EDDI leverages idle resources in super-scalar processors by interleaving these redundant instructions to maximize instruction-level parallelism while minimizing performance overhead. It is particularly effective in detecting transient faults, memory corruption, and control-flow deviations without requiring any hardware modifications, achieving over 98\% fault coverage in benchmark programs.
 
 
 \subsubsection{CFCSS}
@@ -15,7 +15,7 @@ The program is first divided into basic blocks, each representing a unique node 
 
 At runtime, the control flow is validated using a designated general-purpose register (GSR), which holds the expected signature. When control transfers to a new basic block, a new runtime signature is generated using a lightweight XOR-based function that combines the previous and current signatures. This updated signature is then compared with the expected one at the destination block. If a mismatch is detected, it indicates an illegal control transfer, and execution is redirected to an error handler.
 
-CFCSS is particularly advantageous because it requires no dedicated hardware (e.g., watchdog processors) and can operate even in environments without multitasking support. Its effectiveness was validated through fault injection experiments, which showed that while 33.7\% of branching faults went undetected in unprotected programs, only 3.1\% remained undetected when CFCSS was applied, demonstrating an order-of-magnitude improvement in error detection coverage. Although CFCSS introduces moderate code size and execution time overhead (especially in branch-heavy programs).
+CFCSS is particularly advantageous because it requires no dedicated hardware and can operate even in environments without multitasking support. Its effectiveness was validated through fault injection experiments, which showed that while 33.7\% of branching faults went undetected in unprotected programs, only 3.1\% remained undetected when CFCSS was applied, demonstrating an order-of-magnitude improvement in error detection coverage. CFCSS introduces moderate code size and execution time overhead (especially in branch-heavy programs).
 
 \subsubsection{SWIFT}
 
