--- a/src/requirements.tex
+++ b/src/requirements.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Requirements Specification}
 
-The primary objective of this project is to analyze, implement, and evaluate selected software-based fault tolerance techniques. The focus is on embedded systems operating in environments where faults, particularly single event upsets (SEUs), can compromise system behavior. These issues are especially relevant in resource-constrained systems where safety and reliability are paramount.
+The primary objective of this project is to analyze, implement, and evaluate selected software-based fault tolerance techniques. The focus is on embedded systems operating in environments where faults, particularly single event upsets (SEUs), can compromise system behavior. These issues are especially relevant in resource-constrained systems where safety and reliability are paramount, such as the aerospace or the automotive industry.
 
 This section outlines the functional and non-functional requirements that the proposed system must fulfill to meet its objectives. The requirements are derived from practical scenarios and target use cases involving typical embedded workloads, including mathematical computations, sorting algorithms, and data integrity verification. These tasks will be executed under both normal and fault-injected conditions to evaluate the system's behavior and robustness.
 
