--- a/docs.tex
+++ b/docs.tex
@@ -129,7 +129,7 @@ This section focuses on the analysis and comparison of theoretical aspects of fa
 \clearpage
 \section{Implementation}
 
-The implementation section outlines some selected methods which were implemented using Rust and FreeRTOS and tested on a RISC-V core simulation. The implemented methods were modified to make them fasible to implement in a high level language.
+The implementation section outlines some selected methods which were implemented using Rust and FreeRTOS and tested on a RISC-V core simulation. The implemented methods were modified to make them feasible to implement in a high level language.
 
 \input{src/implementation/checkpoint}
 \clearpage
