--- a/src/implementation/multiversion.tex
+++ b/src/implementation/multiversion.tex
@@ -1,6 +1,6 @@
 \subsection{Multiversion}
 
-The implemented multiversion techniques are clumination of most of the techniques discuessed so far.
+The implemented multiversion techniques are culmination of most of the techniques discuessed so far.
 
 \subsubsection{Recovery blocks}
 
