--- a/src/requirements.tex
+++ b/src/requirements.tex
@@ -21,4 +21,4 @@ This section outlines the functional and non-functional requirements that the pr
 \item The implementation shall be maintainable and modular, enabling future extension or substitution of fault tolerance mechanisms.
 \end{itemize}
 
-Ultimately, the project aims to deliver a practical and reproducible evaluation framework for software-based fault tolerance, enabling developers to assess the trade-offs between fault coverage, runtime overhead, and system complexity in embedded contexts.
+Ultimately, the project aims to deliver a practical and reproducible evaluation framework for software-based fault tolerance, enabling developers to assess the trade-offs between fault tolerance, runtime overhead, and system complexity in embedded contexts.
