--- a/src/rust_motivation.tex
+++ b/src/rust_motivation.tex
@@ -28,7 +28,7 @@ Using the approach of \textit{error-as-a-value} we can determine if a function e
 Rust has a powerful macro system which in essence works as a code pre-processor acting over the abstract syntax tree. Unlike C macros, which only work as direct text replacement, Rust macros allow for arbitrary modification and generation of code before the compilation step. Using Rust macros, various fault tolerance techniques can be implemented. An example of utilizing macros is highlighted in this very thesis, where a Control Flow Checking using Signature Streams (CFCSS) technique is implemented using Rust macro system. 
 
 \subsection{Low-level control and C integration}
-Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM under the hood, its compiler is able to link against existing C code. We can also easily use C functions within Rust by declaring the function signature (see figure \ref{fig:rust_extern}). This makes for an easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C\footnote{\url{https://github.com/FreeRTOS/FreeRTOS-Kernel}}.
+Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM\footnote{\url{https://llvm.org/}} (a suite of compiler tools commonly used by C and C++ programming languages) its compiler is able to link against existing C code. We can also easily use C functions within Rust by declaring the function signature (see figure \ref{fig:rust_extern}). This makes for an easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C\footnote{\url{https://github.com/FreeRTOS/FreeRTOS-Kernel}}.
 
 \begin{figure}[!h]
 \begin{lstlisting}[language=Rust]
