--- a/src/analysis/prior_work.tex
+++ b/src/analysis/prior_work.tex
@@ -4,7 +4,7 @@ While the analysis so far was mostly theoretical, this section outlines methods 
 
 \subsubsection{EDDI}
 
-Error Detection by Duplicated Instructions \cite{eddi} (EDDI) is a pure software, technique that enhances runtime error detection by duplicating program instructions during compilation. Each original instruction (master instruction) is paired with a duplicate (shadow instruction) that operates on separate registers or variables. At key synchronization points, such as before memory writes or control transfers, the system compares the results of the master and shadow instructions. Any mismatch indicates an error, triggering a fault handler. EDDI leverages idle resources in super-scalar processors by interleaving these redundant instructions to maximize instruction-level parallelism while minimizing performance overhead. It is particularly effective in detecting transient faults, memory corruption, and control-flow deviations without requiring any hardware modifications, achieving over 98\% fault coverage in benchmark programs.
+Error Detection by Duplicated Instructions \cite{eddi} (EDDI) is a pure software, technique that enhances runtime error detection by duplicating program instructions during compilation. Each original instruction (master instruction) is paired with a duplicate (shadow instruction) that operates on separate registers or variables. At key synchronization points, such as before memory writes or control transfers, the system compares the results of the master and shadow instructions. Any mismatch indicates an error, triggering a fault handler. EDDI leverages idle resources in super-scalar processors by interleaving these redundant instructions to maximize instruction-level parallelism while minimizing performance overhead. It is particularly effective in detecting transient faults, memory corruption, and control-flow deviations without requiring any hardware modifications, achieving over 98\% fault tolerance in benchmark programs.
 
 
 \subsubsection{CFCSS}
@@ -19,4 +19,4 @@ CFCSS is particularly advantageous because it requires no dedicated hardware and
 
 \subsubsection{SWIFT}
 
-SWIFT \cite{swift} (Software Implemented Fault Tolerance) is a compiler-based technique for detecting transient faults using software-only transformations, without requiring any specialized hardware. It builds upon earlier methods like EDDI by duplicating instructions and inserting validation checks, but improves upon them with several key optimizations to reduce memory and performance overhead. Unlike EDDI, SWIFT excludes memory from the sphere of replication, assuming protection is already provided by ECC in modern systems. It introduces an enhanced control-flow checking mechanism using software signatures, allowing it to detect illegal control transfers more reliably. Additionally, SWIFT incorporates optimizations such as restricting signature checks to store-containing blocks and eliminating redundant branch validation. These design decisions enable SWIFT to achieve high fault coverage with lower execution and code size overhead. SWIFT demonstrated fault detection rates comparable to hardware-based methods while incurring significantly less overhead than previous software-only techniques.
+SWIFT \cite{swift} (Software Implemented Fault Tolerance) is a compiler-based technique for detecting transient faults using software-only transformations, without requiring any specialized hardware. It builds upon earlier methods like EDDI by duplicating instructions and inserting validation checks, but improves upon them with several key optimizations to reduce memory and performance overhead. Unlike EDDI, SWIFT excludes memory from the sphere of replication, assuming protection is already provided by ECC in modern systems. It introduces an enhanced control-flow checking mechanism using software signatures, allowing it to detect illegal control transfers more reliably. Additionally, SWIFT incorporates optimizations such as restricting signature checks to store-containing blocks and eliminating redundant branch validation. These design decisions enable SWIFT to achieve high fault tolerance with lower execution and code size overhead. SWIFT demonstrated fault detection rates comparable to hardware-based methods while incurring significantly less overhead than previous software-only techniques.
